links and cookies

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -15,3 +15,5 @@ permalink: /404.html
 <img src="https://i.imgur.com/tN0RDLH.jpeg" class="such-empty">
 
 Sorry, but the page you were trying to view does not exist 🤷
+
+Check out the [Links Page](./links.md) to find what you're looking for.
